tests/files/invalid_files/missing_defined_ruleset.yamler
schema {
    message str optional
    details Details
}